--- a/translations/messages.gl_ES.po
+++ b/translations/messages.gl_ES.po
@@ -1,9 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"Language: gl\n"
+"PO-Revision-Date: 2025-04-04 14:15+0000\n"
+"Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
+"Language-Team: Galician <https://translation.chamilo.org/projects/chamilo/"
+"messages/gl/>\n"
+"Language: gl_ES\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.4.2\n"
 
 msgid "You can generate badges for the skills learnt by your users, to give them recognition for their effort, through which they will be able to show off their acquired skills and competencies with icons that will be shown on their user profile. For more information on OpenBadges, check <a href='http://openbadges.org'>http://openbadges.org/</a>."
 msgstr "Pode xerar insignias para recoñecer as habilidades aprendidas dos seus usuarios, dar un recoñecemento polo seu logro, co cal eles poderán mostrar as súas capacidades e competencias adquiridas a través de emblemas, que serán visualizados no seu perfil de usuario. Para máis información sobre os Open Badges en <a href=\"http://openbadges.org/\">www.openbadges.org</a>"
@@ -3248,6 +3254,7 @@ msgstr "Apelidos do Administrador"
 msgid "Administrator login"
 msgstr "Login do Administrador"
 
+#, fuzzy
 msgid "Project manager"
 msgstr "Responsable Educativo"
 
