--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -1,9 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
+"PO-Revision-Date: 2025-04-04 14:15+0000\n"
+"Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
+"Language-Team: Italian <https://translation.chamilo.org/projects/chamilo/"
+"messages/it/>\n"
 "Language: it\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.4.2\n"
 
 msgid "You can generate badges for the skills learnt by your users, to give them recognition for their effort, through which they will be able to show off their acquired skills and competencies with icons that will be shown on their user profile. For more information on OpenBadges, check <a href='http://openbadges.org'>http://openbadges.org/</a>."
 msgstr "Puoi generare attestati di riconoscimento per le competenze acquisite dagli utenti, i quali potranno mostrarli come icone delle competenze e capacità acquisite, sui loro profili personali. Per ulteriori info su cos'è OpenBadges, visita:<a href=\"http://openbadges.org/\">http://openbadges.org/</a>"
@@ -3248,6 +3254,7 @@ msgstr "Cognome dell'amministratore"
 msgid "Administrator login"
 msgstr "login dell'Amministratore"
 
+#, fuzzy
 msgid "Project manager"
 msgstr "Responsabile didattico"
 
