--- a/translations/messages.el.po
+++ b/translations/messages.el.po
@@ -1,9 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
+"PO-Revision-Date: 2025-04-04 14:14+0000\n"
+"Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
+"Language-Team: Greek <https://translation.chamilo.org/projects/chamilo/"
+"messages/el/>\n"
 "Language: el\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.4.2\n"
 
 msgid "You can generate badges for the skills learnt by your users, to give them recognition for their effort, through which they will be able to show off their acquired skills and competencies with icons that will be shown on their user profile. For more information on OpenBadges, check <a href='http://openbadges.org'>http://openbadges.org/</a>."
 msgstr "Μπορείτε να σχεδιάσετε badges για την πρόοδο που έχει σημειώσει ο κάθε user,έτσι ώστε να αναγνωρίζεται η πρόοδος και η αναβάθμιση του με εικονίδια που θα εμφανίζονται στο προφίλ του.Για περισσότερες πληροφορίες σχετικά με τα OpenBadges,κάντε κλικ στο http://openbadges.org/."
@@ -3248,6 +3254,7 @@ msgstr "Επώνυμο Διαχειριστή"
 msgid "Administrator login"
 msgstr "Όνομα Χρήστη του Διαχειριστή"
 
+#, fuzzy
 msgid "Project manager"
 msgstr "Διαχειριστής έργου (Project manager)"
 
@@ -25042,4 +25049,3 @@ msgstr ""
 
 msgid "%02d h %02d m %02d s"
 msgstr ""
-
