--- a/translations/messages.qu_PE.po
+++ b/translations/messages.qu_PE.po
@@ -1,9 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
+"PO-Revision-Date: 2025-04-04 14:16+0000\n"
+"Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
+"Language-Team: Quechua <https://translation.chamilo.org/projects/chamilo/"
+"messages/qu_PE/>\n"
 "Language: qu_PE\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.4.2\n"
 
 msgid "You can generate badges for the skills learnt by your users, to give them recognition for their effort, through which they will be able to show off their acquired skills and competencies with icons that will be shown on their user profile. For more information on OpenBadges, check <a href='http://openbadges.org'>http://openbadges.org/</a>."
 msgstr "Waqaychaqa kani, tukuykunapaq manaqa kani, maymantapachapi hamut'ayta rurayninpi tayqitaqmi. Mana kaniwa maymantapi tariqan, rikusqanmi rurayninpi q'osqomantaqmi riqsichkan yanapaq, tayqikunapaqmi ushankumantaqmi kaniwa, kay riqsinpi kani rurayninpi tayqipi hukninpi simikunapaq. OpenBadges ñisqaqa huk <a href='http://openbadges.org'>http://openbadges.org/</a> piwaymi kani."
@@ -3248,6 +3254,7 @@ msgstr "Apellidos del administrador"
 msgid "Administrator login"
 msgstr "Nombre de usuario del administrador"
 
+#, fuzzy
 msgid "Project manager"
 msgstr "Responsable educativo"
 
@@ -25042,4 +25049,3 @@ msgstr ""
 
 msgid "%02d h %02d m %02d s"
 msgstr ""
-
