--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -1,9 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"Language: sk_SK\n"
+"PO-Revision-Date: 2025-04-04 14:15+0000\n"
+"Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
+"Language-Team: Slovak <https://translation.chamilo.org/projects/chamilo/"
+"messages/sk/>\n"
+"Language: sk\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Weblate 5.4.2\n"
 
 msgid "You can generate badges for the skills learnt by your users, to give them recognition for their effort, through which they will be able to show off their acquired skills and competencies with icons that will be shown on their user profile. For more information on OpenBadges, check <a href='http://openbadges.org'>http://openbadges.org/</a>."
 msgstr "Môžete vytvárať odznaky pre zručnosti získané používateľmi, dať im uznanie za ich úsilie, prostredníctvom ikon budú môcť ukazať svoje získané zručnosti a kompetencie, ikony budú uvedené v ich profile. Pre viac informácií o OpenBadges, skontrolujte <a href=\"http://openbadges.org\">http://openbadges.org</a>."
@@ -3248,6 +3254,7 @@ msgstr "Priezvisko administrátora"
 msgid "Administrator login"
 msgstr "Prihlásenie administrátora"
 
+#, fuzzy
 msgid "Project manager"
 msgstr "Projektový manažér"
 
