--- a/translations/messages.sr.po
+++ b/translations/messages.sr.po
@@ -1,9 +1,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"Language: sr_RS\n"
+"PO-Revision-Date: 2025-04-04 14:15+0000\n"
+"Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
+"Language-Team: Serbian <https://translation.chamilo.org/projects/chamilo/"
+"messages/sr/>\n"
+"Language: sr\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 5.4.2\n"
 
 msgid "You can generate badges for the skills learnt by your users, to give them recognition for their effort, through which they will be able to show off their acquired skills and competencies with icons that will be shown on their user profile. For more information on OpenBadges, check <a href='http://openbadges.org'>http://openbadges.org/</a>."
 msgstr ""
@@ -3248,6 +3255,7 @@ msgstr "Prezime administratora"
 msgid "Administrator login"
 msgstr "Korisničko ime administratora"
 
+#, fuzzy
 msgid "Project manager"
 msgstr "Administrator projekta"
 
@@ -25042,4 +25050,3 @@ msgstr ""
 
 msgid "%02d h %02d m %02d s"
 msgstr ""
-
